1998-05-21  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/gconv-modules: Add more aliases to please java
	environments.

1998-05-20  Ulrich Drepper  <drepper@cygnus.com>

	* stdio-common/vfprintf.c (process_arg): Fix typo.

	* iconvdata/TESTS: New tests for EUC-KR.

	* iconvdata/Makefile ($(objpfx)iconv-test.out): Also depend on TESTS.
	* iconvdata/testdata/EUC-KR: New file.

1998-05-20 07:26  H.J. Lu  <hjl@gnu.org>

	* math/libm-test.c (hypot_test): Fix a typo.

1998-05-20  Ulrich Drepper  <drepper@cygnus.com>

	* stdio-common/vfprintf.c: When precision is specified for %ls or
	%S handle it correctly.

1998-05-20  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* sysdeps/unix/bsd/vax/vfork.S: Missed double occurences of "the
	the" in one line - fixed it.
	* sysdeps/unix/bsd/sun/m68k/vfork.S: Likewise.
	* sysdeps/unix/bsd/hp/m68k/vfork.S: Likewise.
	* posix/unistd.h: Likewise

1998-05-20  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* Makeconfig (rpath-link): Add resolvobjdir.
	(resolvobjdir): New variable.
	Reported by Peter Breitenlohner <peb@mppmu.mpg.de> [fixes PR libc/633].

1998-05-20 09:36  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dl-close.c: Call shared object terminators at the right time.
	Patch by Philippe Troin <phil@fifi.org>.

1998-05-20  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* Make-dist (+tsrcs): Also add *.map for every member of
	$(extra-libs).

	* Makefile (distribute): Don't distribute scripts/printsources and
	scripts/=__ify.  Distribute FAQ.in.
	(rpm/%): Don't pass subdirs to sub-make.

	* timezone/Makefile: Protect inclusion of z.* by $(avoid-generated)
	instead of $(no_deps).

1998-05-19  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* sysdeps/generic/setenv.c: Protect against GNU C extension.
	(KNOWN_VALUE, STORE_VALUE): Do it right.
	(setenv): Remove unused variable.

1998-05-18  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>
