@@ -1,3 +1,10 @@
+1998-05-21  8:16  Richard Henderson  <rth@cygnus.com>
+
+	* sysdeps/unix/sysv/linux/alpha/glob.c: Include sysdeps/generic/glob.c
+	directly instead of include_next.  Add missing semicolons.
+	* sysdeps/unix/sysv/linux/alpha/oldglob.c: Include sys/types.h.
+	Add missing semicolons.
+
 1998-05-21  Ulrich Drepper  <drepper@cygnus.com>
 
 	* iconvdata/gconv-modules: Add more aliases to please java
